# CassandraProject

./: README.md  setup.sql
AppServer/: AppServerMain.cpp  ApplicationServerServiceImpl.cpp  ApplicationServerServiceImpl.h  CMakeLists.txt  CassDriverWrapper.cpp  CassDriverWrapper.h  CassandraExample.cpp  CassandraExample.h
AppServer/Adapter/: Adapter.cpp  Adapter.h  CompanyAdapter.cpp  CompanyAdapter.h  DroneAdapter.cpp  DroneAdapter.h  FlightAdapter.cpp  FlightAdapter.h  SensorAdapter.cpp  SensorAdapter.h  UserAdapter.cpp  UserAdapter.h
AppServer/Driver/: CassDriverAdapter.cpp  CassDriverAdapter.h  CassDriverWrapper.cpp  CassDriverWrapper.h
AppServer/Model/: Sensor.h  User.h
Model/: Company.h  Drone.h  Flight.h
Model/Mapping/: CompanyMapper.cpp  CompanyMapper.h  DroneMapper.h  FlightMapper.cpp  FlightMapper.h
Protobuffer/protos/: databaseapp.proto
WebServer/: CMakeLists.txt  Helper.cpp  Helper.h  WebServerMain.cpp  Webserver.cpp  Webserver.h
WebServer/Mapping/: CompanyMapper.cpp  CompanyMapper.h  DroneMapper.cpp  DroneMapper.h  GrpcDriver.cpp  GrpcDriver.h  Mapper.h
WebServer/RequestHandler/: AddCompanyRequestHandler.cpp  AddCompanyRequestHandler.h  CompaniesRequestHandler.cpp  CompaniesRequestHandler.h  CompanyRequestHandler.cpp  CompanyRequestHandler.h  DroneRequestHandler.cpp  DroneRequestHandler.h  WebRequestHandlerFactory.cpp  WebRequestHandlerFactory.h
WebServer/Storage/: GrpcDriver.cpp  GrpcDriver.h  Storage.cpp  Storage.h
WebServer/html/: addCompany.html  companies.html  companiesItem.html  company.html  companyDroneItem.html  drone.html  droneFlightItem.html
